--- a/style.css
+++ b/style.css
@@ -5,6 +5,193 @@
     
 }
 
+.botones{
+    position:fixed;
+    width: 150px;
+    z-index: 9999;
+    left: 8%;
+    color: white;
+    background: black;
+    margin-top: 25px;
+}
+
+.botones:hover{
+    color: white;
+    background: blue;
+}
+
+.norte{
+	position:fixed;
+	width:3%;
+	left: 2.3%;
+	padding: 1.2%;
+}
+
+
+ /* --------------------------------- */
+
+
+
+ .texto{
+    color: black;
+ }
+
+.titulo{
+    color: blue;
+}
+
+.textarea {
+    height: 50px;
+    width: 100%;
+    resize: none;
+}
+
+
+ .modalDialog {
+	position: fixed;
+	font-family: Arial, Helvetica, sans-serif;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background: rgba(0,0,0,0.8);
+    color: black;
+	z-index: 99999;
+	opacity:0;
+	-webkit-transition: opacity 400ms ease-in;
+	-moz-transition: opacity 400ms ease-in;
+	transition: opacity 400ms ease-in;
+	pointer-events: none;
+}
+.modalDialog:target {
+	opacity:1;
+	pointer-events: auto;
+}
+
+.modalDialog > div {
+	width: 500px;
+    height: 350px;
+	position: relative;
+	margin: 10% auto;
+	padding: 5px 20px 13px 20px;
+	border-radius: 10px;
+	background:white;
+-moz-transition: opacity 400ms ease-in;
+transition: opacity 400ms ease-in;
+}
+
+.close {
+	background: white;
+	color: red;
+	line-height: 25px;
+	position: absolute;
+	right: -12px;
+	text-align: center;
+	top: -10px;
+	width: 24px;
+	text-decoration: none;
+	font-weight: bold;
+	-webkit-border-radius: 12px;
+	-moz-border-radius: 12px;
+	border-radius: 12px;
+	-moz-box-shadow: 1px 1px 3px #000;
+	-webkit-box-shadow: 1px 1px 3px #000;
+	box-shadow: 1px 1px 3px #000;
+}
+.close:hover { background: red; color: white }
+
+  /* --------------------------------- */
+
+ .container-login{
+    width: 100%;
+    height: 100Vh;
+    background-image: linear-gradient(rgba(0,0,0,0.8),rgba(0,0,0,0.8)), url("images/fondo.jpeg");
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.login{
+    display: flex;
+    justify-content: space-around;
+    width: 600px;
+}
+.btn{
+    margin: 5px 0;
+    width: 150px;
+    z-index: 9999;
+    color: white;
+    background: black;
+}
+
+.btn2{
+    margin: 5px;
+    width: 150px;
+    z-index: 9999;
+    color: white;
+    background: black;
+}
+
+.btn:hover{
+    color: white;
+    background: blue;
+}
+
+.btn2:hover{
+    color: white;
+    background: blue;
+}
+
+#map { 
+    height: 100vh; 
+    position: relative;
+}
+.formulario{
+    position: absolute;
+    top: 5%;
+    left:  5%;
+    z-index: 100000;
+}
+.formulario-login{
+    position: absolute;
+    top: 5%;
+    right:  5%;
+    z-index: 100000;
+}
+.dropdown-menu{
+    width: 300px;
+    height: auto;
+    padding: 10px;
+}
+.form-check{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0;
+}
+.form-check-label{
+    font-size: 30px;
+}
+
+
+ /* --------------------------------- */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .container{
     width: 100%;
     height: 100vh;
@@ -137,27 +324,9 @@ h5{
 	height:100%;
 }
 
-.norte{
-	position:fixed;
-	width:3%;
-	left: 2.3%;
-	padding: 1.2%;
-}
 
-.volver{
-    position:fixed;
-    width: 150px;
-    z-index: 9999;
-    left: 8%;
-    color: white;
-    background: black;
-    margin-top: 25px;
-}
 
-.volver:hover{
-    color: black;
-    background: white;
-}
+
 
 .nuevo{
     position:fixed;
@@ -170,8 +339,8 @@ h5{
 }
 
 .nuevo:hover{
-    color: black;
-    background: white;
+    color: white;
+    background: blue;
 }
 
 
